# ZE-FH

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/ZE/FH/: Config.h
include/ZE/FH/common/: Conversion.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  thread.cpp
src/core/include/ZE/Core/: Utils.h  task.h  thread.h
src/core/include/ZE/Core/Common/: Conversion.hpp
src/core/include/ZE/FH/Core/: thread.h
src/fh/: CMakeLists.txt  Config.cpp  MarketDataFeedhandler.cpp  app.conf
src/fh/include/ZE/FH/: Config.h  Logging.h  MarketDataDispatcher.h  MarketDataFeedHandler.h
